[metadata]
name = tradier-python
version = 0.1.1
license = MIT License
description = Tradier API client implemented in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phileaton/tradier-python
author = Philip Eaton
classifiers=
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    requests
    pydantic

[options.packages.find]
where=src

;[options.entry_points]
;console_scripts =
;    my_sript = my_sript.__main__:main
